[metadata]
name = neutron-checking
summary = Neutron Health Checking
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    neutron_checking
data_files =
    etc/neutron =
        etc/api-paste.ini
        etc/rootwrap.conf
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/debug.filters
        etc/neutron/rootwrap.d/dhcp.filters
        etc/neutron/rootwrap.d/dibbler.filters
        etc/neutron/rootwrap.d/iptables-firewall.filters
        etc/neutron/rootwrap.d/ebtables.filters
        etc/neutron/rootwrap.d/ipset-firewall.filters
        etc/neutron/rootwrap.d/l3.filters
        etc/neutron/rootwrap.d/linuxbridge-plugin.filters
        etc/neutron/rootwrap.d/openvswitch-plugin.filters

[entry_points]
console_scripts =
    neutron-checking-agent = neutron_checking.cmd.eventlet.agents.checking_agent:main
    neutron-checking-server = neutron_checking.cmd.eventlet.server:main
oslo.config.opts =
    neutron-checking = neutron_checking.opts:list_opts
    neutron-checking.agent = neutron_checking.opts:list_agent_opts
neutron_checking.core_plugins =
    core = neutron_checking.plugins.core_plugin:CorePlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron_checking/locale
domain = neutron-checking

[update_catalog]
domain = neutron-checking
output_dir = neutron_checking/locale
input_file = neutron_checking/locale/neutron-checking.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_checking/locale/neutron-checking.pot
